--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
+script: npm run-script coverage
+after_script: npm install coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
