--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
+  - "iojs"
 script: make test-cov
 after_script: npm install coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
