--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sinon": "^1.17.2"
   },
   "dependencies": {
+    "any-promise": "^1.0.0",
     "bcrypt": "^0.8.4",
     "bluebird": "^3.0.5",
     "native-or-bluebird": "^1.2.0"
