--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ node_js:
   - "5"
   - "6"
 script: make test-cov
-after_script: npm install coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+after_script: npm install codecov && cat ./coverage/lcov.info | ./node_modules/codecov/bin/codecov
